---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: ????
  Info:
    - Support opening thruster control behavior by clicking a thruster
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2024. 11. 17
  Info:
    - Fix a crash when mining a ghost? weird that it didn't come up earlier
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2024. 11. 17
  Info:
    - Fix crash in surface_find_entity_or_ghost upon platform destruction
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2024. 11. 17
  Info:
    - Fix crash when deathrattling an offering after the thruster got removed
    - Fix manual control being broken by code added later
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2024. 11. 17
  Info:
    - Mod portal release
---------------------------------------------------------------------------------------------------
Version: 0.0.4
Date: 2024. 11. 17
  Info:
    - Support copying thrusters onto thrusters
    - Prevent the gui horizontally stretching when a circuit/logistics panel was open
    - Setup the hidden surface as a planet
    - Attempt to set lava tiles to dispose of the picked up item (fails because tiles get reset)
    - Setup burner inserters on the hidden surface
    - Switch the burner inserter to a powered inserter
    - Create the offering, and toggle the thruster when it is taken
    - Attempt to invert the condition
    - Try to prevent the offering from happening twice
    - Well this does jack shit it seems
    - Final code sweep pre-launch
    - Fix thruster staying offline when disabeling the checkbox